assets/css/sangupta.css
html {
  height: 100%;
}
body {
  padding-top: 50px;
  height: 100%;
}
.pad-top-20 {
  padding-top: 20px;
}
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}
main {
  padding: 20px;
  padding-top: 0;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}
.main {
  background-image: url("/assets/images/bg.png");
  background-repeat: repeat;
}
.monoDate {
  font-family: Monaco, "Courier New", monospace;
}
.main {
  font-size: 16px;
  line-height: 32px;
}
.main pre {
  line-height: 22px;
}
.main h1 {
  line-height: 54px;
}
.main h2 {
  font-size: 24px;
}
.post-content p, .page-content p {
  padding-top: 30px;
}
li p {
  padding-top: 0 !important;
}
body {
  background-image: url("/assets/images/bg.png");
  background-repeat: repeat;
}
.relative {
  position: relative;
}
.full-height {
  height: 100%;
}
.bottom {
  position: absolute;
  bottom: 0;
}
.footer {
  font-size: 10px;
  padding-top: 20px;
  background-color: #f5f5f5;
  color: #777;
}
.footer p {
  margin-top: 20px;
  margin-bottom: 10px;
}
.social-links {
  font-size: 20px;
}
.sidebar-main-link {
  display: block;
  padding-top: 10px;
  text-align: center;
  margin-top: 10px;
}
.readMore {
  font-style: italic;
}
.side-kick {
  display: block;
  font-size: 12px;
}
a.fa-lg {
  cursor: pointer;
}
.profile-image {
  padding:0;
  margin:0 auto;
  width: 120px;
}
.post {
  padding-top: 25px;
}
.full-height {
  height: 100%;
  min-height: 100%;
}
.archive .row {
  padding-top: 10px;
}
table {
  border: 1px solid #ddd;
  max-width: 100%;
  margin-bottom: 20px;
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  display: table;
}
table>tbody>tr:nth-child(odd) {
  background-color: #f9f9f9;
}
table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
table>caption+thead>tr:first-child>th, table>colgroup+thead>tr:first-child>th, table>thead:first-child>tr:first-child>th, table>caption+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>td, .table>thead:first-child>tr:first-child>td {
  border-top: 0;
}
table>thead>tr>th, table>thead>tr>td {
  border-bottom-width: 2px;
}
table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
  border: 1px solid #ddd;
}
code.language-text {
  color: #0ee;
}
.poetry pre, .poetry pre code {
  background-color: transparent !important;
  color: #333;
  border: none !important;
  padding: 0;
  margin: 0;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  margin-top: 30px;
}
.statcounter {
  display: none;
}

